--- a/war/BuiltInDS.html
+++ b/war/BuiltInDS.html
@@ -6,7 +6,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>BuiltInDS</title>
+    <title>IPO Book Building App</title>
     
     <!-- IMPORTANT : You must set the variable isomorphicDir to [MODULE_NAME]/sc/ so that the SmartGWT resource are 
 	  correctly resolved -->	
@@ -35,7 +35,7 @@
   <body>
 
     <!--load the datasources-->
-    <script src="builtinds/sc/DataSourceLoader?dataSource=supplyItem,animals,employees"></script>
+    <script src="builtinds/sc/DataSourceLoader?dataSource=animals,supplyItem,employees,bidsession"></script>
 
     <!-- OPTIONAL: include this if you want history support -->
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
